--- a/net.resheim.eclipse.timekeeper-site/src/main/resources/index.html
+++ b/net.resheim.eclipse.timekeeper-site/src/main/resources/index.html
@@ -105,10 +105,10 @@ img {
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h2>Eclipse Timekeeper Software Site</h2>
+			<h2>Timekeeper for Eclipse Software Site</h2>
 				<p>This is an Eclipse software site, also known as a Equinox p2 Repository. You are not allowed browse this resource but can install the plug-ins using the <i>Eclipse Marketplace Client</i>. Simply drag the <q>install</q> link below into the toolbar of an running Eclipse instance.</p>
 				<p>You may also click the link to get more information about how to use the <i>Eclipse Marketplace client</i>.</p>
-				<a href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=364668" class="drag" title="Drag to your running Eclipse workspace to install OS X Eclipse Launcher">
+				<a href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=2196325" class="drag" title="Drag to your running Eclipse workspace to install OS X Eclipse Launcher">
 					<span class="btn"><i class="install fa fa-download"></i> Install</span>
 					<div class="tooltip"><h3>Drag to Install!</h3>Drag to your running Eclipse workspace.</div>
 				</a>
