--- a/net.resheim.eclipse.timekeeper-feature/license.html
+++ b/net.resheim.eclipse.timekeeper-feature/license.html
@@ -8,7 +8,7 @@
 
 <body lang="EN-US">
 	<h2>User Agreement</h2>
-	<p>January 30, 2015</p>
+	<p>March 30, 2015</p>
 
 	<h3>Usage Of Content</h3>
 
@@ -55,7 +55,7 @@
 
 	<p>THE ABOUTS, FEATURE LICENSES, AND FEATURE UPDATE LICENSES REFER
 		TO THE EPL OR OTHER LICENSE AGREEMENTS, NOTICES OR TERMS AND
-		CONDITIONS. THESE OTHER LICENSE AGREEMENTS INCLUDE:</p>
+		CONDITIONS. THESE OTHER LICENSE AGREEMENTS MAY INCLUDE:</p>
 
 	<ul>
 		<li>Apache Software License 2.0 (available at <a
